--- a/3DVectorMath/3DVectorMath.csproj
+++ b/3DVectorMath/3DVectorMath.csproj
@@ -8,4 +8,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\VectorLib\VectorLib.csproj" />
+  </ItemGroup>
+
 </Project>
