--- a/3DVectorMath/3DVectorMath.csproj
+++ b/3DVectorMath/3DVectorMath.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="HelixToolkit.Wpf" Version="2.22.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\VectorLib\VectorLib.csproj" />
   </ItemGroup>
 
